--- a/dabs/job_example/resources/select_notebook.job.yml
+++ b/dabs/job_example/resources/select_notebook.job.yml
@@ -32,3 +32,6 @@ resources:
             node_type_id: i3.xlarge
             data_security_mode: SINGLE_USER
             num_workers: 1
+            init_scripts:
+              - workspace:
+                  destination: /Workspace/Users/${workspace.current_user.userName}/databricks-assets/scripts/datadog_install.sh
